# MuKiP-pip

./: .gitignore  README.md  pyproject.toml
LICENSES/: NOTICE.txt
LICENSES/kotlin/: LICENSE.txt
LICENSES/kotlinx-coroutines/: NOTICE.txt
LICENSES/kotlinx-serialization/: LICENSE.txt
src/examples/: example.py
src/examples/1.NORR_Ni/: NORR.json  NORR_Ni.mukip  energies.txt
src/examples/2.CO2RR_Cu/: CO2RR_Cu.mukip  energies.txt
src/examples/3.C2+_Rh/: C2+_Rh.mukip  energies.txt
src/examples/4.COHydro/: COHydro.mukip  energies.txt
src/mukip/: __init__.py  jvm_manager.py  microkinetic_model.py  plot_2d.py
